tests/sksl/errors/golden/UsingInvalidValue.glsl
### Compilation failed:

error: 3: expected '(' to begin constructor invocation
error: 5: expected '(' to begin function call
2 errors
